* cfglayout.c (cleanup_unconditional_jumps): New static function. 	(cfg_layout_initialize): Use it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@46948 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -15,3 +15,8 @@ Mon Nov 12 14:19:07 CET 2001  Jan Hubicka  <jh@suse.cz>
 	(set_insn_scopes, regenerate_block_notes): New.
 	(INSN_SCOPE): New.
 	(insn_scope): New varray.
+
+Mon Nov 12 16:25:53 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfglayout.c (cleanup_unconditional_jumps): New static function.
+	(cfg_layout_initialize): Use it.
