* cfglayout.c (fixup_fallthru_exit_predecesor): New static function. 	(cfg_layout_finalize): Use it. 	* bb-reorder.c (HAVE_epilogue): Remove. 	(make_reorder_chain): Do not care special placement of 	last basic block.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@46950 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,16 @@
+Mon Nov 12 16:35:21 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfglayout.c (fixup_fallthru_exit_predecesor): New static function.
+	(cfg_layout_finalize): Use it.
+	* bb-reorder.c (HAVE_epilogue): Remove.
+	(make_reorder_chain): Do not care special placement of 
+	last basic block.
+
+Mon Nov 12 16:25:53 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfglayout.c (cleanup_unconditional_jumps): New static function.
+	(cfg_layout_initialize): Use it.
+
 Mon Nov 12 14:19:07 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfglayout.c (struct scope_def): Kill fields note_beg, note_end,
@@ -15,8 +28,3 @@ Mon Nov 12 14:19:07 CET 2001  Jan Hubicka  <jh@suse.cz>
 	(set_insn_scopes, regenerate_block_notes): New.
 	(INSN_SCOPE): New.
 	(insn_scope): New varray.
-
-Mon Nov 12 16:25:53 CET 2001  Jan Hubicka  <jh@suse.cz>
-
-	* cfglayout.c (cleanup_unconditional_jumps): New static function.
-	(cfg_layout_initialize): Use it.
