--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2318,7 +2318,11 @@ $(docdir)/gcc.info: $(docdir)/gcc.texi $(docdir)/extend.texi \
 	 $(docdir)/include/funding.texi $(docdir)/bugreport.texi \
 	 $(docdir)/contribute.texi $(docdir)/frontends.texi \
 	 $(docdir)/service.texi $(docdir)/standards.texi \
-	 $(docdir)/trouble.texi $(docdir)/vms.texi
+	 $(docdir)/trouble.texi $(docdir)/vms.texi $(docdir)/configterms.texi \
+	 $(docdir)/fragments.texi $(docdir)/hostconfig.texi \
+	 $(docdir)/include/linux-and-gnu.texi $(docdir)/interface.texi \
+	 $(docdir)/makefile.texi $(docdir)/passes.texi \
+	 $(docdir)/portability.texi
 	cd $(srcdir) && $(MAKEINFO) $(MAKEINFOFLAGS) -I doc -I doc/include -o doc/gcc.info doc/gcc.texi
 
 $(docdir)/cppinternals.info: $(docdir)/cppinternals.texi
@@ -2339,7 +2343,11 @@ gcc.dvi: $(docdir)/gcc.texi $(docdir)/extend.texi $(docdir)/install-old.texi \
 	 $(docdir)/include/funding.texi $(docdir)/bugreport.texi \
 	 $(docdir)/contribute.texi $(docdir)/frontends.texi \
 	 $(docdir)/service.texi $(docdir)/standards.texi \
-	 $(docdir)/trouble.texi $(docdir)/vms.texi
+	 $(docdir)/trouble.texi $(docdir)/vms.texi $(docdir)/configterms.texi \
+	 $(docdir)/fragments.texi $(docdir)/hostconfig.texi \
+	 $(docdir)/include/linux-and-gnu.texi $(docdir)/interface.texi \
+	 $(docdir)/makefile.texi $(docdir)/passes.texi \
+	 $(docdir)/portability.texi
 	$(TEXI2DVI) -I $(docdir) -I $(docdir)/include $(docdir)/gcc.texi
 
 cppinternals.dvi: $(docdir)/cppinternals.texi
