--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,13 @@
+Mon Nov 12 18:36:09 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* Makefile.in (tracer.o): Add.
+	* rtl.h (tracer): New function.
+	* toplev.c (flag_tracer): New.
+	(f_options): add -ftracer.
+	(rest_of_compilation): Call tracer.
+	(toplev_main): Enable tracer at -O2.
+	* tracer.c: New file.
+
 Mon Nov 12 17:02:31 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfglayout.c (cfg_layout_can_duplicate_bb_p,
