* Makefile.in (expr.o): Depends on insn-attr.h. 	* expr.c (insn-attr.h): New include. 	(force_operand): If INSN_SCHEDULING, deal with paradoxical SUBREG 	of MEM. 	(highest_pow2_factor, case INTEGER_CST): Handle negative values. 	(expand_expr): Remove unneeded mark_temp_addr_taken calls and 	clean up related usage in ADDR_EXPR. 	(expand_expr_unaligned): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46980 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1404,9 +1404,9 @@ except.o : except.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
    insn-config.h hard-reg-set.h $(BASIC_BLOCK_H) output.h \
    dwarf2asm.h dwarf2out.h toplev.h $(HASHTAB_H) intl.h $(GGC_H)
 expr.o : expr.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h function.h \
-   $(REGS_H) $(EXPR_H) $(OPTABS_H) libfuncs.h insn-config.h $(RECOG_H) \
-   output.h typeclass.h hard-reg-set.h toplev.h hard-reg-set.h except.h \
-   reload.h $(GGC_H) intl.h $(TM_P_H)
+   $(REGS_H) $(EXPR_H) $(OPTABS_H) libfuncs.h insn-attr.h insn-config.h \
+   $(RECOG_H) output.h typeclass.h hard-reg-set.h toplev.h hard-reg-set.h \
+   except.h reload.h $(GGC_H) intl.h $(TM_P_H)
 builtins.o : builtins.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
    $(TARGET_H) function.h $(REGS_H) $(EXPR_H) $(OPTABS_H) insn-config.h \
    $(RECOG_H) output.h typeclass.h hard-reg-set.h toplev.h hard-reg-set.h \
