* predict.c (expected_value_to_br_prob): Delete the note 	once transformed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@46981 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Tue Nov 13 12:28:49 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* predict.c (expected_value_to_br_prob): Delete the note
+	once transformed.
+
 Mon Nov 12 19:58:01 CET 2001  Andreas Jaeger <aj@suse.de>
 
 	* tracer.c: Fix spelling and whitespace.
