* c-decl.c (c_expand_body): Fix TV_EXPAND nesting problem; 	measure integration time separately.
	* gcse.c (delete_null_pointer_checks_1): Fix CFG udpate.

	* toplev.c (rest_of_compilation): Avoid most of cfg rebuilds.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@46982 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,12 @@
+Tue Nov 13 13:30:32 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* c-decl.c (c_expand_body): Fix TV_EXPAND nesting problem;
+	measure integration time separately.
+
+	* gcse.c (delete_null_pointer_checks_1): Fix CFG udpate.
+
+	* toplev.c (rest_of_compilation): Avoid most of cfg rebuilds.
+
 Tue Nov 13 12:28:49 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* predict.c (expected_value_to_br_prob): Delete the note
