--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Tue Nov 13 14:05:19 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfglayout.c (cleanup_unconditional_jumps): Do not get confused
+	by dead jumptables.
+
 Tue Nov 13 13:30:32 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* c-decl.c (c_expand_body): Fix TV_EXPAND nesting problem;
