--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+2001-11-13  Andreas Jaeger  <aj@suse.de>
+
+	* cfgcleanup.c (thread_jump): Rename label fail to avoid warning.
+
 Tue Nov 13 14:05:19 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfglayout.c (cleanup_unconditional_jumps): Do not get confused
