--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,11 @@
+Tue Nov 13 15:54:33 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* toplev.c (DFI_tracer): New.
+	(dump_file_info): Add DFI_tracer.
+	(rest_of_compilation): reorganize tracer handling; add some
+	sanity checks.
+	* timervar.def (TV_TRACER): New.
+
 2001-11-13  Andreas Jaeger  <aj@suse.de>
 
 	* cfgcleanup.c (thread_jump): Rename label fail to avoid warning.
