* cfgclenaup.c (try_forward_edges, try_crossjump_to_edge): 	Never produce negative counts/frequencies. 	* cfglayout.c (cfg_layout_duplicate_bb): Likewise. 	* cfgrtl.c (verify_flow_info): Check frequncies.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47005 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,10 @@
+Tue Nov 13 16:26:24 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfgclenaup.c (try_forward_edges, try_crossjump_to_edge):
+	Never produce negative counts/frequencies.
+	* cfglayout.c (cfg_layout_duplicate_bb): Likewise.
+	* cfgrtl.c (verify_flow_info): Check frequncies.
+
 Tue Nov 13 15:54:33 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* toplev.c (DFI_tracer): New.
