--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Wed Nov 14 14:07:20 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* tracer.c (count_insns): New function.
+	(construct_traces): Tweek heuristics.
+
 Wed Nov 14 14:04:14 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfglayout.c (cfg_layout_duplicate_bb): Grok libcall sequences.
