--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Wed Nov 14 18:25:13 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* tracer.c (tracer): Re-add lost mark_dfs_back_edges call.
+
 Wed Nov 14 14:48:07 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfglayout.c (cfg_layout_duplicate_bb): Fix libcalls.
