* configure.in (noconfigdirs) [h8300*-*-*, h8500-*-*]: Disable 	libf2c.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47022 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -736,7 +736,7 @@ case "${target}" in
     ;;
   h8300*-*-* | \
   h8500-*-*)
-    noconfigdirs="$noconfigdirs ${libstdcxx_version} target-librx target-libgloss ${libgcj}"
+    noconfigdirs="$noconfigdirs ${libstdcxx_version} target-librx target-libgloss ${libgcj} target-libf2c"
     ;;
   hppa*64*-*-linux* | parisc*64*-*-linux*)
     # In this case, it's because the hppa64-linux target is for
