--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Thu Nov 15 16:53:20 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* predict.c (propagate_freq): Make cyclic_probability and frequency
+	volatile
+
 Wed Nov 14 18:25:13 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* tracer.c (tracer): Re-add lost mark_dfs_back_edges call.
