* gcse.c (try_replace_reg): Copy RTX before creating note.
	* Makefile.in (web.o): Add.
	* rtl.h (web_main): Add prototype.
	* timervar.def (TV_WEB): New.
	* toplev.c (dump_file_index): Add DFI_web.
	(dump_file_info): Add "web".
	(flag_web): New static variable.
	(f_options): Add "web".
	(rest_of_compilation): Call web_main.
	(toplev_main): Add flag_web.
	* web.c: New file.

	* df.h (df_ref_flags): New uenum.
	(DF_REF_FLAGS): New macro.
	(struct ref): Add field "flags".
	* df.c (HANDLE_SUBREG): Remove.
	(df_ref_create): Likewise; set flags field of ref.
	(df_def_record_1): Strip down read_write subreg; remove
	commented out code; set READ_WRITE flag.
	(read_modify_subreg_p): New static function.
	(df_uses_record): Cleanup SET handling; set READ_WRITE flag;
	new argument "flags".
	(df_insn_refs_record): Update call of df_uses_record.
	(df_insn_modify): Avoid #if 0 around comment.
	(df_dump): Dump the read/write flag.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47100 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/Makefile.in
+++ b/cfg-branch/gcc/Makefile.in
@@ -745,7 +745,7 @@ OBJS = alias.o bb-reorder.o bitmap.o builtins.o caller-save.o calls.o	\
  sibcall.o simplify-rtx.o splay-tree.o ssa.o ssa-ccp.o ssa-dce.o stmt.o	\
  stor-layout.o stringpool.o timevar.o toplev.o tree.o tree-inline.o 	\
  unroll.o varasm.o varray.o version.o xcoffout.o cfglayout.o tracer.o	\
- $(GGC) $(out_object_file) $(EXTRA_OBJS)
+ $(GGC) $(out_object_file) $(EXTRA_OBJS) web.o
 
 BACKEND = main.o libbackend.a
 
@@ -1464,6 +1464,9 @@ cse.o : cse.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(REGS_H) hard-reg-set.h flags.h 
    real.h insn-config.h $(RECOG_H) $(EXPR_H) toplev.h output.h function.h \
    $(BASIC_BLOCK_H) $(GGC_H) $(TM_P_H)
 gcse.o : gcse.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(REGS_H) hard-reg-set.h \
+   flags.h real.h insn-config.h ggc.h $(RECOG_H) $(EXPR_H) $(BASIC_BLOCK_H) \
+   function.h output.h toplev.h $(TM_P_H) $(PARAMS_H)
+web.o : gcse.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(REGS_H) hard-reg-set.h \
    flags.h real.h insn-config.h ggc.h $(RECOG_H) $(EXPR_H) $(BASIC_BLOCK_H) \
    function.h output.h toplev.h $(TM_P_H) $(PARAMS_H)
 sibcall.o : sibcall.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(REGS_H) function.h \
