--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,34 @@
+Fri Nov 16 21:13:46 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* gcse.c (try_replace_reg): Copy RTX before creating note.
+
+Thu Nov 15 18:18:50 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* Makefile.in (web.o): Add.
+	* rtl.h (web_main): Add prototype.
+	* timervar.def (TV_WEB): New.
+	* toplev.c (dump_file_index): Add DFI_web.
+	(dump_file_info): Add "web".
+	(flag_web): New static variable.
+	(f_options): Add "web".
+	(rest_of_compilation): Call web_main.
+	(toplev_main): Add flag_web.
+	* web.c: New file.
+
+	* df.h (df_ref_flags): New uenum.
+	(DF_REF_FLAGS): New macro.
+	(struct ref): Add field "flags".
+	* df.c (HANDLE_SUBREG): Remove.
+	(df_ref_create): Likewise; set flags field of ref.
+	(df_def_record_1): Strip down read_write subreg; remove
+	commented out code; set READ_WRITE flag.
+	(read_modify_subreg_p): New static function.
+	(df_uses_record): Cleanup SET handling; set READ_WRITE flag;
+	new argument "flags".
+	(df_insn_refs_record): Update call of df_uses_record.
+	(df_insn_modify): Avoid #if 0 around comment.
+	(df_dump): Dump the read/write flag.
+
 Thu Nov 15 16:53:20 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* predict.c (propagate_freq): Make cyclic_probability and frequency
