2001-11-17  Laurent Guerby  <guerby@acm.org>
	* Make-lang.in (GNATLIBFLAGS): Add -W -Wall.
	* gigi.h (init_decl_processing): Rename to gnat_init_decl_processing.
	* io-aux.c: Provide K&R prototypes to all functions, reformat code.
	* lang-spec.h: Add missing struct field to silence warnings.
	* sysdep.c (rts_get_*): Provide K&R prototype.
	* sysdep.c (Unlock_Task, Lock_Task): Move to K&R prototype.
	* traceback.c (Unlock_Task, Lock_Task): Likewise.
	* tracebak.c (__gnat_backtrace): Remove unused variable.
	* utils.c (end_subprog_body): Move to K&R style.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47117 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/Make-lang.in
+++ b/gcc/ada/Make-lang.in
@@ -48,7 +48,7 @@ shext  =
 # Extra flags to pass to recursive makes.
 BOOT_ADAFLAGS= $(ADAFLAGS)
 ADAFLAGS= -W -Wall -gnatpg -gnata
-GNATLIBFLAGS= -gnatpg
+GNATLIBFLAGS= -W -Wall -gnatpg
 GNATLIBCFLAGS= -g -O2
 ADA_INCLUDE_DIR = $(libsubdir)/adainclude
 ADA_RTL_OBJ_DIR = $(libsubdir)/adalib
