* cfgrtl.c (purge_dead_edges):  Cleanup EDGE_ABNORMAL flag if computed 	jump is turned into simplejump.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47119 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Sat Nov 17 14:32:07 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfgrtl.c (purge_dead_edges):  Cleanup EDGE_ABNORMAL flag if computed
+	jump is turned into simplejump.
+
 Fri Nov 16 21:13:46 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* gcse.c (try_replace_reg): Copy RTX before creating note.
