--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Sat Nov 17 19:12:52 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* web.c (union_defs): Union uses of the instruction that
+	do use same pseudo.
+
 Sat Nov 17 16:30:45 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* toplev.c (rest_of_compilation): Fix ordering problem of PDO.
