* i386.c (ix86_cc_mode): Accept USE.
	* cse.c (cse_insn): really do not record equivalences of the
	last instruction.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47126 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,10 @@
+Sat Nov 17 21:10:33 CET 2001  Jan Hubicka  <jH@suse.cz>
+
+	* i386.c (ix86_cc_mode): Accept USE.
+
+	* cse.c (cse_insn): really do not record equivalences of the
+	last instruction.
+
 Sat Nov 17 19:12:52 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* web.c (union_defs): Union uses of the instruction that
