* predict.c (block_info_def, edge_info_def): Add volatiles.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47140 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,4 +1,8 @@
-Sat Nov 17 21:10:33 CET 2001  Jan Hubicka  <jH@suse.cz>
+Sun Nov 18 11:55:20 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* predict.c (block_info_def, edge_info_def): Add volatiles.
+
+Sat Nov 17 21:10:33 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (ix86_cc_mode): Accept USE.
 
