--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2325,7 +2325,8 @@ $(docdir)/gcc.info: $(docdir)/gcc.texi $(docdir)/extend.texi \
 	 $(docdir)/fragments.texi $(docdir)/hostconfig.texi \
 	 $(docdir)/gnu.texi $(docdir)/interface.texi \
 	 $(docdir)/makefile.texi $(docdir)/passes.texi \
-	 $(docdir)/portability.texi
+	 $(docdir)/portability.texi $(docdir)/collect2.texi \
+	 $(docdir)/configfiles.texi $(docdir)/headerdirs.texi
 	cd $(srcdir) && $(MAKEINFO) $(MAKEINFOFLAGS) -I doc -I doc/include -o doc/gcc.info doc/gcc.texi
 
 $(docdir)/cppinternals.info: $(docdir)/cppinternals.texi
@@ -2350,7 +2351,8 @@ gcc.dvi: $(docdir)/gcc.texi $(docdir)/extend.texi $(docdir)/install-old.texi \
 	 $(docdir)/fragments.texi $(docdir)/hostconfig.texi \
 	 $(docdir)/gnu.texi $(docdir)/interface.texi \
 	 $(docdir)/makefile.texi $(docdir)/passes.texi \
-	 $(docdir)/portability.texi
+	 $(docdir)/portability.texi $(docdir)/collect2.texi \
+	 $(docdir)/configfiles.texi $(docdir)/headerdirs.texi
 	$(TEXI2DVI) -I $(docdir) -I $(docdir)/include $(docdir)/gcc.texi
 
 cppinternals.dvi: $(docdir)/cppinternals.texi
