--- a/gcc/f/Make-lang.in
+++ b/gcc/f/Make-lang.in
@@ -67,39 +67,23 @@ F77 f77: f771$(exeext)
 
 g77spec.o: $(srcdir)/f/g77spec.c $(srcdir)/f/version.h $(SYSTEM_H) $(GCC_H) \
 	$(CONFIG_H)
-	case "$(LANGUAGES)" in \
-	  *[fF]77*) $(STAMP) lang-f77;; \
-	  *) rm -f lang-f77;; \
-	esac
-	if [ -f lang-f77 ]; then \
-	  $(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) \
-		$(srcdir)/f/g77spec.c $(OUTPUT_OPTION); \
-	else true; fi
+	$(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) \
+		$(srcdir)/f/g77spec.c $(OUTPUT_OPTION)
 
 g77version.o: $(srcdir)/f/version.c
-	case "$(LANGUAGES)" in \
-	  *[fF]77*) $(STAMP) lang-f77;; \
-	  *) rm -f lang-f77;; \
-	esac
-	if [ -f lang-f77 ]; then \
-	  $(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) -o g77version.o \
-	    $(srcdir)/f/version.c; \
-	else true; fi
+	$(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) -o g77version.o \
+	    $(srcdir)/f/version.c
 
 # Create the compiler driver for g77.
 g77$(exeext): gcc.o g77spec.o g77version.o version.o prefix.o intl.o \
   $(LIBDEPS) $(EXTRA_GCC_OBJS)
-	if [ -f lang-f77 ]; then \
-	  $(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ gcc.o g77spec.o g77version.o \
-	   version.o prefix.o intl.o $(EXTRA_GCC_OBJS) $(LIBS); \
-	else true; fi
+	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ gcc.o g77spec.o g77version.o \
+	   version.o prefix.o intl.o $(EXTRA_GCC_OBJS) $(LIBS)
 
 # Create a version of the g77 driver which calls the cross-compiler.
 g77-cross$(exeext): g77$(exeext)
-	if [ -f lang-f77 ]; then \
-	  rm -f g77-cross$(exeext); \
-	  cp g77$(exeext) g77-cross$(exeext); \
-	else true; fi
+	rm -f g77-cross$(exeext); \
+	cp g77$(exeext) g77-cross$(exeext)
 
 # The compiler itself.
 
@@ -177,11 +161,7 @@ $(srcdir)/f/g77.info: $(srcdir)/f/g77.texi $(srcdir)/f/bugs.texi \
 		$(srcdir)/f/root.texi $(srcdir)/doc/include/fdl.texi \
 		$(srcdir)/doc/include/gpl.texi \
 		$(srcdir)/doc/include/funding.texi
-	case "$(LANGUAGES)" in \
-	  *[fF]77*) $(STAMP) lang-f77;; \
-	  *) rm -f lang-f77;; \
-	esac
-	if [ -f lang-f77 ] && [ x$(BUILD_INFO) = xinfo ]; then \
+	if [ x$(BUILD_INFO) = xinfo ]; then \
 	  rm -f $(srcdir)/f/g77.info-*; \
 	  cd $(srcdir)/f && $(MAKEINFO) -I../doc/include -o g77.info g77.texi; \
 	else true; fi
@@ -192,28 +172,16 @@ f/g77.dvi: $(srcdir)/f/g77.texi $(srcdir)/f/bugs.texi \
 		$(srcdir)/f/root.texi $(srcdir)/doc/include/fdl.texi \
 		$(srcdir)/doc/include/gpl.texi \
 		$(srcdir)/doc/include/funding.texi
-	case "$(LANGUAGES)" in \
-	  *[fF]77*) $(STAMP) lang-f77;; \
-	  *) rm -f lang-f77;; \
-	esac
-	if [ -f lang-f77 ]; then \
-	  s=`cd $(srcdir); pwd`; export s; \
-	  cd f && $(TEXI2DVI) -I $$s/doc/include $$s/f/g77.texi; \
-	else true; fi
+	s=`cd $(srcdir); pwd`; export s; \
+	cd f && $(TEXI2DVI) -I $$s/doc/include $$s/f/g77.texi
 
 $(srcdir)/f/g77.1: $(srcdir)/f/invoke.texi
-	case "$(LANGUAGES)" in \
-	  *[fF]77*) $(STAMP) lang-f77;; \
-	  *) rm -f lang-f77;; \
-	esac
-	if [ -f lang-f77 ]; then \
-	  if [ x$(GENERATED_MANPAGES) = xgenerated-manpages ]; then \
-            $(TEXI2POD) < $(srcdir)/f/invoke.texi > f/g77.pod; \
-            ($(POD2MAN) --section=1 f/g77.pod > f/g77.1.T$$$$ && \
-                mv -f f/g77.1.T$$$$ $(srcdir)/f/g77.1) || \
-                (rm -f f/g77.1.T$$$$ && exit 1); \
-            rm -f f/g77.pod; \
-	  else true; fi; \
+	if [ x$(GENERATED_MANPAGES) = xgenerated-manpages ]; then \
+          $(TEXI2POD) < $(srcdir)/f/invoke.texi > f/g77.pod; \
+          ($(POD2MAN) --section=1 f/g77.pod > f/g77.1.T$$$$ && \
+              mv -f f/g77.1.T$$$$ $(srcdir)/f/g77.1) || \
+              (rm -f f/g77.1.T$$$$ && exit 1); \
+          rm -f f/g77.pod; \
 	else true; fi
 
 # This dance is all about producing accurate documentation for g77's
@@ -282,14 +250,8 @@ f77.install-normal:
 
 # Install the driver program as $(target)-g77
 # and also as either g77 (if native) or $(tooldir)/bin/g77.
-# Make sure `installdirs' target (from gcc Makefile) has been
-# run, since we use libsubdir to store our `flag' file, lang-f77.
 f77.install-common: installdirs
-	case "$(LANGUAGES)" in \
-	  *[fF]77*) $(STAMP) $(libsubdir)/lang-f77.com;; \
-	  *) rm -f $(libsubdir)/lang-f77.com;; \
-	esac
-	-if [ -f $(libsubdir)/lang-f77.com -a -f f771$(exeext) ] ; then \
+	-if [ -f f771$(exeext) ] ; then \
 	  if [ -f g77-cross$(exeext) ] ; then \
 	    rm -f $(bindir)/$(G77_CROSS_NAME)$(exeext); \
 	    $(INSTALL_PROGRAM) g77-cross$(exeext) $(bindir)/$(G77_CROSS_NAME)$(exeext); \
@@ -309,18 +271,11 @@ f77.install-common: installdirs
 	  echo '         f77-install-ok in the source or build directory.)'; \
 	  echo ''; \
 	else true; fi
-	rm -f $(libsubdir)/lang-f77.com
 
 # $(INSTALL_DATA) might be a relative pathname, so we can't cd into srcdir
 # to do the install.  The sed rule was copied from stmp-int-hdrs.
-# Make sure `installdirs' target (from gcc Makefile) has been
-# run, since we use libsubdir to store our `flag' file, lang-f77.
 f77.install-info: f77.info installdirs
-	case "$(LANGUAGES)" in \
-	  *[fF]77*) $(STAMP) $(libsubdir)/lang-f77.info;; \
-	  *) rm -f $(libsubdir)/lang-f77.info;; \
-	esac
-	if [ -f $(libsubdir)/lang-f77.info -a -f $(srcdir)/f/g77.info ] ; then \
+	if [ -f $(srcdir)/f/g77.info ] ; then \
 	  rm -f $(infodir)/g77.info*; \
 	  for f in $(srcdir)/f/g77.info*; do \
 	      realfile=`echo $$f | sed -e 's|.*/\([^/]*\)$$|\1|'`; \
@@ -328,22 +283,15 @@ f77.install-info: f77.info installdirs
 	  done; \
 	  chmod a-x $(infodir)/g77.info*; \
 	else true; fi
-	@if [ -f $(libsubdir)/lang-f77.info -a -f $(srcdir)/f/g77.info ] ; then \
+	@if [ -f $(srcdir)/f/g77.info ] ; then \
 	  if $(SHELL) -c 'install-info --version | sed 1q | fgrep -s -v -i debian' >/dev/null 2>&1; then \
 	    echo " install-info --info-dir=$(infodir) $(infodir)/g77.info"; \
 	    install-info --info-dir=$(infodir) $(infodir)/g77.info || : ; \
 	  else : ; fi; \
 	else : ; fi
-	rm -f $(libsubdir)/lang-f77.info
 
-# Make sure `installdirs' target (from gcc Makefile) has been
-# run, since we use libsubdir to store our `flag' file, lang-f77.
 f77.install-man: $(srcdir)/f/g77.1 installdirs
-	case "$(LANGUAGES)" in \
-	  *[fF]77*) $(STAMP) $(libsubdir)/lang-f77.man;; \
-	  *) rm -f $(libsubdir)/lang-f77.man;; \
-	esac
-	-if [ -f $(libsubdir)/lang-f77.man -a -f f771$(exeext) ] ; then \
+	-if [ -f f771$(exeext) ] ; then \
 	  if [ -f g77-cross$(exeext) ] ; then \
 	    rm -f $(man1dir)/$(G77_CROSS_NAME)$(man1ext); \
 	    $(INSTALL_DATA) $(srcdir)/f/g77.1 $(man1dir)/$(G77_CROSS_NAME)$(man1ext); \
@@ -354,29 +302,17 @@ f77.install-man: $(srcdir)/f/g77.1 installdirs
 	    chmod a-x $(man1dir)/$(G77_INSTALL_NAME)$(man1ext); \
 	  fi; \
 	else true; fi
-	rm -f $(libsubdir)/lang-f77.man
 
-# Make sure `installdirs' target (from gcc Makefile) has been
-# run, since we use libsubdir to store our `flag' file, lang-f77.
 f77.uninstall: installdirs
-	case "$(LANGUAGES)" in \
-	  *[fF]77*) $(STAMP) $(libsubdir)/lang-f77.un;; \
-	  *) rm -f $(libsubdir)/lang-f77.un;; \
-	esac
-	@if [ -f $(libsubdir)/lang-f77.un ] ; then \
-	  if $(SHELL) -c 'install-info --version | sed 1q | fgrep -s -v -i debian' >/dev/null 2>&1; then \
-	    echo " install-info --delete --info-dir=$(infodir) $(infodir)/g77.info"; \
-	    install-info --delete --info-dir=$(infodir) $(infodir)/g77.info || : ; \
-	  else : ; fi; \
+	if $(SHELL) -c 'install-info --version | sed 1q | fgrep -s -v -i debian' >/dev/null 2>&1; then \
+	  echo " install-info --delete --info-dir=$(infodir) $(infodir)/g77.info"; \
+	  install-info --delete --info-dir=$(infodir) $(infodir)/g77.info || : ; \
 	else : ; fi
-	-if [ -f $(libsubdir)/lang-f77.un ]; then \
-	  rm -rf $(bindir)/$(G77_INSTALL_NAME)$(exeext); \
-	  rm -rf $(bindir)/$(G77_CROSS_NAME)$(exeext); \
-	  rm -rf $(man1dir)/$(G77_INSTALL_NAME)$(man1ext); \
-	  rm -rf $(man1dir)/$(G77_CROSS_NAME)$(man1ext); \
-	  rm -rf $(infodir)/g77.info*; \
-	fi
-	rm -f $(libsubdir)/lang-f77.un
+	rm -rf $(bindir)/$(G77_INSTALL_NAME)$(exeext); \
+	rm -rf $(bindir)/$(G77_CROSS_NAME)$(exeext); \
+	rm -rf $(man1dir)/$(G77_INSTALL_NAME)$(man1ext); \
+	rm -rf $(man1dir)/$(G77_CROSS_NAME)$(man1ext); \
+	rm -rf $(infodir)/g77.info*
 #
 # Clean hooks:
 # A lot of the ancillary files are deleted by the main makefile.
@@ -391,7 +327,7 @@ f77.mostlyclean:
 f77.clean:
 	-rm -f g77spec.o g77version.o
 f77.distclean:
-	-rm -f lang-f77 f/Makefile
+	-rm -f f/Makefile
 f77.extraclean:
 f77.maintainer-clean:
 	-rm -f f/g77.info* f/g77.*aux f/TAGS f/BUGS f/NEWS f/intdoc.texi
@@ -400,24 +336,19 @@ f77.maintainer-clean:
 # The main makefile has already created stage?/f.
 
 G77STAGESTUFF = f/*$(objext) f/fini$(build_exeext) f/stamp-str \
-  f/str-*.h f/str-*.j lang-f77 g77spec.o g77version.o
+  f/str-*.h f/str-*.j g77spec.o g77version.o
 
 f77.stage1: stage1-start
-	-if [ -f lang-f77 ]; then \
-	  mv -f $(G77STAGESTUFF) stage1/f; \
-	fi
+	-mv -f $(G77STAGESTUFF) stage1/f
+
 f77.stage2: stage2-start
-	-if [ -f lang-f77 ]; then \
-	  mv -f $(G77STAGESTUFF) stage2/f; \
-	fi
+	-mv -f $(G77STAGESTUFF) stage2/f
+
 f77.stage3: stage3-start
-	-if [ -f lang-f77 ]; then \
-	  mv -f $(G77STAGESTUFF) stage3/f; \
-	fi
+	-mv -f $(G77STAGESTUFF) stage3/f
+
 f77.stage4: stage4-start
-	-if [ -f lang-f77 ]; then \
-	  mv -f $(G77STAGESTUFF) stage4/f; \
-	fi
+	-mv -f $(G77STAGESTUFF) stage4/f
 
 #
 # .o: .h dependencies.
