2001-11-18  Craig Rodrigues  <rodrigc@gcc.gnu.org>
	PR bootstrap/4020
	* mklibgcc.in: Add missing semi-colons.
	* Makefile.in: Same.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47154 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/mklibgcc.in
+++ b/gcc/mklibgcc.in
@@ -335,7 +335,7 @@ done
 
 echo 'stmp-dirs: force'
 echo '	for d in '"$dirs"'; do \'
-echo '	  if [ -d $$d ]; then true; else '$mkinstalldirs' $$d; fi \'
+echo '	  if [ -d $$d ]; then true; else '$mkinstalldirs' $$d; fi; \'
 echo '	done'
 echo '	if [ -f stmp-dirs ]; then true; else touch stmp-dirs; fi'
 
