--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Mon Nov 19 12:05:45 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* gcse.c (delete_null_pointer_checks): Call delete_related_insns.
+
 Sun Nov 18 11:55:20 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* predict.c (block_info_def, edge_info_def): Add volatiles.
