--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,9 @@
+Mon Nov 19 13:22:58 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* gcse.c (delete_null_pointer_checks_1): Do not use delelete_list;
+	call purge_dead_edges after removing.
+	(delete_null_pointer_checks): Do not handle delete_list.
+
 Mon Nov 19 12:05:45 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* gcse.c (delete_null_pointer_checks): Call delete_related_insns.
