* cfglayout.c (cfg_layout_duplicate_bb): Avoid overflow.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47174 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Mon Nov 19 14:13:35 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfglayout.c (cfg_layout_duplicate_bb): Avoid overflow.
+
 Mon Nov 19 13:22:58 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* gcse.c (delete_null_pointer_checks_1): Do not use delelete_list;
