2001-11-19  Laurent Guerby  <guerby@acm.org>
	* Makefile.in (INCLUDES_FOR_SUBDIR): Remove redundant system include
	since it is of no apparent use and cause warnings.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47180 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -266,7 +266,7 @@ INCLUDES = -I- -I. -I.. -I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../config \
 
 ADA_INCLUDES = -I- -I. -I$(srcdir)
 
-INCLUDES_FOR_SUBDIR = -I. -I.. -I../.. -I../../include -I$(fsrcdir) \
+INCLUDES_FOR_SUBDIR = -I. -I.. -I../.. -I$(fsrcdir) \
 	-I$(fsrcdir)/.. -I$(fsrcdir)/../config -I$(fsrcdir)/../../include
 ADA_INCLUDES_FOR_SUBDIR = -I. -I$(fsrcdir)
 
