* Make-lang.in: Complete ``Build g77.1 in $(srcdir)''.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47198 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/Make-lang.in
+++ b/gcc/f/Make-lang.in
@@ -153,7 +153,7 @@ f77.rest.encap:
 
 # Note the kludge to get g77.1 to build.
 
-f77.info: $(srcdir)/f/g77.info f/g77.1
+f77.info: $(srcdir)/f/g77.info $(srcdir)/f/g77.1
 f77.dvi: f/g77.dvi
 
 # g77 documentation.
