* web.c: Include function.h 	(union_defs): Copy pseudo's flags; union noop moves.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47217 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Tue Nov 20 16:58:37 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* web.c: Include function.h
+	(union_defs): Copy pseudo's flags; union noop moves.
+
 Mon Nov 19 14:13:35 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfglayout.c (cfg_layout_duplicate_bb): Avoid overflow.
