* cfg.c (dump_flow_info):  Verify the profile.
	* profile.c (compute_branch_probabilites):  Compute probabilities
	for entry/exit edges; estimate probabilities for zero counts.

	* cfglayout.c (cfg_layout_duplicate_bb):  Fix profile updating
	code.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47220 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,13 @@
+Tue Nov 20 18:52:33 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfg.c (dump_flow_info):  Verify the profile.
+
+	* profile.c (compute_branch_probabilites):  Compute probabilities 
+	for entry/exit edges; estimate probabilities for zero counts.
+
+	* cfglayout.c (cfg_layout_duplicate_bb):  Fix profile updating
+	code.
+
 Tue Nov 20 16:58:37 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* web.c: Include function.h
