* tracer.c: Include flags. 	(ignore_bb_p): New function. 	(MIN_COUNT, MIN_FREQUENCY, DYNAMIC_COVERAGE, MAXIMAL_CODE_GROWTH): 	new constatns. 	(better_p): Avoid roundoff errors. 	(find_best_successor, find_best_predecessor): Ignore ignored 	blocks. 	(is_trace_head_p): Do not care ENTRY_BLOCK_PTR. 	(tail_duplicate): Ignore ignored blocks; limit code growth
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@47237 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,15 @@
+Wed Nov 21 10:47:35 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* tracer.c: Include flags.
+	(ignore_bb_p): New function.
+	(MIN_COUNT, MIN_FREQUENCY, DYNAMIC_COVERAGE, MAXIMAL_CODE_GROWTH):
+	new constatns.
+	(better_p): Avoid roundoff errors.
+	(find_best_successor, find_best_predecessor): Ignore ignored
+	blocks.
+	(is_trace_head_p): Do not care ENTRY_BLOCK_PTR.
+	(tail_duplicate): Ignore ignored blocks; limit code growth
+
 Tue Nov 20 18:52:33 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* cfg.c (dump_flow_info):  Verify the profile.
