--- a/cfg-branch/gcc/Makefile.in
+++ b/cfg-branch/gcc/Makefile.in
@@ -1590,7 +1590,7 @@ lists.o: lists.c $(CONFIG_H) $(SYSTEM_H) toplev.h $(RTL_H) $(GGC_H)
 bb-reorder.o : bb-reorder.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
    $(BASIC_BLOCK_H) hard-reg-set.h output.h cfglayout.h
 tracer.o : tracer.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) \
-   $(BASIC_BLOCK_H) hard-reg-set.h output.h cfglayout.h
+   $(BASIC_BLOCK_H) hard-reg-set.h output.h cfglayout.h flags.h
 cfglayout.o : cfglayout.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) \
    insn-config.h $(BASIC_BLOCK_H) hard-reg-set.h output.h function.h \
    cfglayout.h
